--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ menu: true
 
 </section>
 
-<section id="products">
+<section id="products" class="section">
 
     <h2 class="section-heading text-center">Products</h2>
     <section class="two-cols-description-section section-accent section">
