--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ menu: true
 
           <br />
 
-          <form name="contact" action="https://formspree.io/rcolett@calyxeum.com" method="post" class="form">
+          <form name="contact" action="https://formspree.io/f/rcolett@calyxeum.com" method="post" class="form">
             <p><strong>Send us a message:</strong></p>
             <div class="form-validation alert"></div>
             <div class="form-group">
