--- a/index.html
+++ b/index.html
@@ -217,9 +217,12 @@ menu: true
 
           <strong>CALYXEUM</strong> In The News
           <br />
+          <br />
           <a href="https://www.metrotimes.com/detroit/while-detroits-social-equity-plan-gets-held-up-in-a-lawsuit-these-cannapreneurs-arent-waiting/Content?oid=26892220" target="_blank"><strong>Metro Times</strong> - While Detroit's social equity plan gets held up in a lawsuit, these cannapreneurs aren't waiting</a>
           <br />
+          <br />
           <a href="https://www.metrotimes.com/detroit/the-detroit-cannabis-project-launches-to-help-bring-diversity-to-michigans-cannabis-industry/Content?oid=26756028" target="_blank"><strong>Metro Times</strong> - The Detroit Cannabis Project launches to help bring diversity to Michigan's marijuana industry</a>
+          <br />
           <br />
           <a href="https://www.michiganradio.org/post/stateside-whitmer-kidnapping-plot-coronavirus-strategy-business-booming-cannabis-mi" target="_blank"><strong>Michigan Radio</strong> - Stateside: Whitmer on kidnapping plot; coronavirus strategy; business is booming for cannabis in MI</a>
 
@@ -279,7 +282,7 @@ menu: true
     <h2 class="section-heading text-center">Products</h2>
 
 
-    <div class="hidden-sm">
+    <div class="hidden-sm hidden-xs">
       <section class="two-cols-description-section section-accent section">
 
         <div class="container-fluid two-cols-description-row">
@@ -681,11 +684,11 @@ menu: true
     <br />
 
     <div class="benefits-row">
-      <div class="row eq-height-row">
+      <div class="row">
 
         <!-- BENEFIT 1 -->
-        <div class="col-sm-6 col-md-6">
-          <div class="benefit" style="min-height: 560px">
+        <div class="col-md-12 col-lg-6">
+          <div class="benefit">
             <span class="benefit-icon fa fa-home" data-animation="bounceIn"></span>
             <h4 class="benefit-title">Rehabilitating Dilapidated Homes</h4>
             <ul class="icon-list small-icon-list">
@@ -702,8 +705,8 @@ menu: true
         </div>
 
         <!-- BENEFIT 2 -->
-        <div class="col-sm-6 col-md-6">
-          <div class="benefit" style="min-height: 560px">
+        <div class="col-md-12 col-lg-6">
+          <div class="benefit">
             <span class="benefit-icon fa fa-calculator" data-animation="bounceIn"></span>
             <h4 class="benefit-title">After School STEM Program</h4>
             <ul class="icon-list small-icon-list">
@@ -722,11 +725,11 @@ menu: true
 
       <div class="hidden-md hidden-lg clear"></div>
 
-      <div class="row eq-height-row">
+      <div class="row">
 
         <!-- BENEFIT 3 -->
-        <div class="col-sm-6 col-md-6">
-          <div class="benefit" style="min-height: 735px">
+        <div class="col-md-12 col-lg-6">
+          <div class="benefit">
             <span class="benefit-icon fa fa-users" data-animation="bounceIn"></span>
             <h4 class="benefit-title">Workforce Development Program</h4>
             <ul class="icon-list small-icon-list">
@@ -752,8 +755,8 @@ menu: true
         </div>
 
       <!-- BENEFIT 4 -->
-      <div class="col-sm-6 col-md-6">
-        <div class="benefit" style="min-height: 735px">
+      <div class="col-md-12 col-lg-6">
+        <div class="benefit">
           <span class="benefit-icon fa fa-leaf" data-animation="bounceIn"></span>
           <h4 class="benefit-title">Build Community Gardens</h4>
           <ul class="icon-list small-icon-list">
